# dxrpy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
src/dxrpy/: __init__.py  client.py  dxr_client.py
src/dxrpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/dxrpy/datasource/: __init__.py  manager.py
src/dxrpy/document_categories/: document_categories.py
src/dxrpy/extractors/: __init__.py  extractors.py
src/dxrpy/index/: __init__.py  search_results.py
src/dxrpy/on_demand_classifier/: __init__.py  on_demand_classifier.py
src/dxrpy/settings_profiles/: __init__.py  settings_profiles.py
src/dxrpy/smart_labels/: __init__.py  smart_labels.py
tests/: test_dxr_client.py
tests/datasource/: test_datasource_manager.py
tests/extractors/: test_extractors.py
tests/index/: test_index.py  test_search_results.py
tests/on_demand_classifier/: test_on_demand_classifier.py
tests/settings_profiles/: test_settings_profiles.py
tests/smart_labels/: test_smart_labels.py
