[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dxrpy"
version = "0.3.2"
description = "A client library for DXR"
readme = "README.md"
authors = [
    { name = "Darko Stanimirovic", email = "dstanimirovic@ohalo.co" }
]
license = { text = "MIT" }
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[project.urls]
Homepage = "https://github.com/darkostanimirovic/dxrpy"
Issues = "https://github.com/darkostanimirovic/dxrpy/issues"
